Make seek slider correct length on firefox

--- a/default.css
+++ b/default.css
@@ -135,6 +135,7 @@ body {
 
 #seek_slider {
 	width: 100%;
+	box-sizing: border-box;
 }
 
 #centered_content {
